v1.1.0/modules/schema/pages/class/IECStandard.adoc
= `IECStandard`
:toclevels: 4


+++Standard published by IEC (International Electrotechnical Commission).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:IECStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`IECStandard`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<standardEdition,`standardEdition`>>
//| [[slots_table.standardEdition]]<<standardEdition,`standardEdition`>>
| 0..1 +
xref::enumeration/IECStandardEditionKind.adoc[`IECStandardEditionKind`]
| +++Edition of IEC standard.+++
| _n/a_

| <<standardNumber,`standardNumber`>>
//| [[slots_table.standardNumber]]<<standardNumber,`standardNumber`>>
| 0..1 +
xref::enumeration/IECStandardKind.adoc[`IECStandardKind`]
| +++IEC standard number.+++
| _n/a_
|===

'''


//[discrete]
[#standardEdition]
=== `standardEdition`
+++Edition of IEC standard.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IECStandard.standardEdition`
| Cardinality
| 0..1
| Type
| xref::enumeration/IECStandardEditionKind.adoc[`IECStandardEditionKind`]


|===

////
[.text-left]
--
<<slots_table.standardEdition,&#10548;>>
--
////


//[discrete]
[#standardNumber]
=== `standardNumber`
+++IEC standard number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IECStandard.standardNumber`
| Cardinality
| 0..1
| Type
| xref::enumeration/IECStandardKind.adoc[`IECStandardKind`]


|===

////
[.text-left]
--
<<slots_table.standardNumber,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/TestStandard.adoc[`TestStandard`] | xref::class/TestStandard.adoc#testStandardIEC[`testStandardIEC`]


|===

